clutchbids-gateway-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-gw-routes
spec:
  parentRefs:
    - name: http-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/p2p
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
      backendRefs:
        - name: p2p-listings-service
          port: 80
